# consoleAppStaticPlayer

./: .gitignore  .gitmodules  App.h  AudioEngine.h  AudioFilePlayerModule.cpp  AudioFilePlayerModule.h  AudioModule.h  BufferedAudioFilePlayerModule.cpp  BufferedAudioFilePlayerModule.h  CMakeLists.txt  consoleAudioPlayer.config.json  main.cpp
.cache/clangd/index/: App.h.DE0A49CD8ABAC7CB.idx  AudioEngine.h.33A519D7779A0533.idx  AudioFilePlayerModule.cpp.FA13161681D5C22A.idx  AudioFilePlayerModule.h.604467C1A195AFB2.idx  AudioModule.h.97E432AC153CC59B.idx  RtAudio.cpp.F9AC9F6B8DB3BA77.idx  RtAudio.h.A9EA1EBCC9C3B46D.idx  RtAudioEngine.h.C0BBBC40FD702328.idx  UdpSender.h.9EAC7120E7939918.idx  choc_Assert.h.9F813FC12AEA3058.idx  choc_AudioFileFormat.h.AB312ACC0C84C659.idx  choc_AudioFileFormat_WAV.h.4F43BAF408215C3A.idx  choc_AudioSampleData.h.9F0B5898CDEE2CA8.idx  choc_Base64.h.CF76EC97210C37E3.idx  choc_Endianness.h.AE6BFF1FBAC7FFF8.idx  choc_FloatToString.h.4F60EEAF073F6A11.idx  choc_JSON.h.1A7C839FB3A7CC0C.idx  choc_MathHelpers.h.AAEC694ABBB9D4A2.idx  choc_SampleBuffers.h.701C46DF1066B588.idx  choc_SincInterpolator.h.DA5273139391CE76.idx  choc_StringUtilities.h.2834D34F534ACE09.idx  choc_UTF8.h.7536F36693C31744.idx  choc_Value.h.8D6EDA5314681E9C.idx  main.cpp.22038082584C7AAB.idx
docker-dev/: Dockerfile  README.md  docker-compose.yml
include/: App.h  AudioEngine.h  AudioFilePlayerModule.h  AudioGenerator.h  AudioModule.h  BufferedAudioFilePlayer.h  JackClient.h  JackTransportController.h  RtAudioEngine.h  UdpSender.h
include/choc/audio/: choc_SampleBuffers.h
src/: AudioFilePlayerModule.cpp  BufferedAudioFilePlayer.cpp  JackClient.cpp  JackTransportController.cpp  main.cpp
